fixed borders in dark mode to show white.

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -7,7 +7,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    border-bottom: thick double black;
+    border-bottom: thick double;
 }
 
 header h1, .mode-switch {
@@ -41,7 +41,7 @@ main {
 #form {
     width: 50%;
     text-align: center;
-    border-left: thick double black;
+    border-left: thick double;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,7 +78,7 @@ form {
 .submit {
     width: 100%;
     padding: 10px;
-    background-color: black;
+    background-color: blue;
     color: white;
     border: none;
     border-radius: 5px;
@@ -86,13 +86,13 @@ form {
 }
  
 .submit:hover {
-    background-color: blue;
+    background-color: orange;
 }
 
 footer {
     display: flex;
     justify-content: center;
-    border-top: thick double black;
+    border-top: thick double;
 }
 
   /* Designed for Mobile */
