--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
     background-color: black;
     color: white;
     height: 100vh;
+    border-color: white;
 }
 
 .light {
